--- a/src/Polibrary.csproj
+++ b/src/Polibrary.csproj
@@ -14,15 +14,32 @@
     <ItemGroup>
         <PackageReference Include="PolyMod" Version="*" />
     </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <PropertyGroup>
-      <ModFilesDir>$(ProjectDir)..\mod\</ModFilesDir>
-      <ZipFile>$(ProjectDir)..\Polibrary.polymod</ZipFile>
-    </PropertyGroup>
-    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(ModFilesDir)" />
-    <ItemGroup>
-      <FilesToZip Include="$(ModFilesDir)**\*" />
-    </ItemGroup>
-    <ZipDirectory SourceDirectory="$(ModFilesDir)" DestinationFile="$(ZipFile)" Overwrite="true" />
-  </Target>
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <PropertyGroup>
+            <ModFilesDir>$(ProjectDir)..\mod\</ModFilesDir>
+            <ZipFile>$(ProjectDir)..\Polibrary.polymod</ZipFile>
+
+            <SteamDir Condition="'$(SteamDir)' != ''">$(SteamDir)</SteamDir>
+            <SteamDir Condition="'$(SteamDir)' == '' AND '$(OS)' == 'Windows_NT'">C:\Program Files (x86)\Steam</SteamDir>
+            <SteamDir Condition="'$(SteamDir)' == '' AND '$(OS)' != 'Windows_NT' AND Exists('$(HOME)/.steam/steam')">$(HOME)/.steam/steam</SteamDir>
+            <SteamDir Condition="'$(SteamDir)' == '' AND '$(OS)' != 'Windows_NT' AND Exists('$(HOME)/Library/Application Support/Steam')">$(HOME)/Library/Application Support/Steam</SteamDir>
+
+            <PolytopiaModsDir>$(SteamDir)/steamapps/common/The Battle Of Polytopia/Mods</PolytopiaModsDir>
+        </PropertyGroup>
+
+        <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(ModFilesDir)" />
+
+        <ItemGroup>
+            <FilesToZip Include="$(ModFilesDir)**\*" />
+        </ItemGroup>
+
+        <ZipDirectory SourceDirectory="$(ModFilesDir)" DestinationFile="$(ZipFile)" Overwrite="true" />
+
+        <Error Condition="!Exists('$(PolytopiaModsDir)')" 
+              Text="Polytopia Mods folder not found at '$(PolytopiaModsDir)'. Please set SteamDir manually (e.g. dotnet build -p:SteamDir=/path/to/steam)." />
+
+        <Message Text="Deploying $(ZipFile) to $(PolytopiaModsDir)" Importance="high" />
+
+        <Copy SourceFiles="$(ZipFile)" DestinationFolder="$(PolytopiaModsDir)" />
+    </Target>
 </Project>
