updated description in manifest

--- a/mod/manifest.json
+++ b/mod/manifest.json
@@ -11,5 +11,5 @@
             "min": "2.10.0"
         }
     ],
-    "description": "General library of tools for modders."
+    "description": "Polibrary 2.1-pre2. General library of tools for modders."
 }
