--- a/mod/manifest.json
+++ b/mod/manifest.json
@@ -3,7 +3,7 @@
     "name": "Polibrary",
     "version": "2.1",
     "authors": [
-        "Fapingvin: Main guye 1", "wasd_: Main guye 2", "With help from: exploit, johnklipi"
+        "Fapingvin: Main guye 1", "wasd_: Main guye 2", "With help from: exploit, johnklipi, incomplete_tree(Also known as Sapling)"
     ],
     "dependencies": [
         {
